--- a/code/Makefile
+++ b/code/Makefile
@@ -6,11 +6,10 @@ BIN     := bin
 SRC     := src
 INCLUDE := include
 
-LIBRARIES   := simulation_base
+LIBRARIES   := simulation
 EXECUTABLE  := main.exe
 
 $(BIN)/$(EXECUTABLE): $(SRC)/*.cpp
-#	$(CC) -std=$(STD) $(CFLAG) -I $(INCLUDE) $^ -o $@ $(LIBRARIES)
 	$(CC) -std=$(STD) $(CFLAG) -I./$(INCLUDE) $^ -o $@ -L./$(INCLUDE)/lib/ -l$(LIBRARIES)
 run : $(BIN)/$(EXECUTABLE)
 	clear
@@ -18,13 +17,3 @@ run : $(BIN)/$(EXECUTABLE)
 
 clean:
 	-rm $(BIN)/$(EXECUTABLE)
-# 	-rm output.dat
-#	-rm drag_coefficient.dat
-
-
-#$(TARGET) : $(OBJ)
-#	$(CC) -o $(TARGET).exe $(OBJ) $(CFLAG) -std=$(STD)
-	
-#%.o: %.cpp
-#	$(CC) -c $^ -o $@ $(CFLAG) -std=$(STD)
-
